# EDNL

./: .codacy.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
app/: cemento.cpp  diam_center.cpp  dijkstra.cpp  feat.cpp  laberinto.cpp  main.cpp  zldgen.cpp
files/: P6.md  agen_int.txt  agen_out.txt  fig.txt  grafopmc.txt  int.txt  k5.ps  nietos.txt  rebeldes.txt
files/arboles/: abb.txt  abb_poda.txt  complete.txt  grafopmc.txt  op.txt  pseudocmp.txt  ternario.txt
files/grafos/: avion.txt  bus.txt  conexo.txt  diametro.txt  dijkstra.txt  dijkstrainv.txt  dirigido.txt  dirigido2.txt  dirigido3.txt  distribuicion.txt  no_dirigido.txt  seed8x8.txt  tombuctu.txt  unsigned.txt  zuelandia.txt
include/: abb.hpp  abb_px.hpp  abin.hpp  abin_exam.hpp  abin_p1.hpp  abin_p2.hpp  afig.hpp  agen.hpp  agenda.hpp  arboles.hpp  ioabin.hpp  ioagen.hpp  op.hpp  pathabin.hpp  pathagen.hpp  prueba.txt  trunk.hpp
include/arboles/: abb.hpp  abb_px.hpp  abin_p1.hpp  abin_p2.hpp  agen_p1.hpp  agenda.hpp  apo.hpp  ioabin.hpp  ioagen.hpp  pathabin.hpp
include/grafos/: ._ma.hpp  alg.hpp  apo.hpp  cola.hpp  io.hpp  la.hpp  lista.hpp  ma.hpp  matriz.hpp  particion.hpp  pla.hpp  pmc.hpp
include/practicas/: P6.hpp  P7.hpp  P8.hpp
src/: op.cpp  trunk.cpp
src/practicas/: P6.hpp
tests/: grafos.cpp  main.cpp  practica_1.cpp  practica_2.cpp  practica_3.cpp  practica_4.cpp  practica_6.cpp
